# talentpool

./: .gitignore  Jenkinsfile  docker-compose.yml  package-lock.json  package.json  vite.config.ts
backend/: Dockerfile  app.py  auth.py  config.py  crud.py  database.py  main.py  models.py  production_config.py  pyproject.toml  requirements.txt  schemas.py
backend/core/: config.py
backend/routers/: auth.py  dashboard.py  interviews.py  positions.py  resumes.py  system.py
backend/utils/: resume_parser.py
docker/backend/: Dockerfile
docker/frontend/: Dockerfile  nginx.conf
docker/mysql/: init.sql
frontend/: .env.production  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  env.d.ts  main.ts
src/: App.vue  main.ts  tsconfig.json
src/api/: auth.ts  dashboard.ts  index.ts  interview.ts  position.ts  resume.ts  user.ts
src/components/: DurationInput.vue  InterviewFeedbackForm.vue  NavBar.vue  PositionBudgetView.vue  ResumeUpload.vue
src/composables/: usePermission.ts
src/controllers/: auth.controller.ts  interview.controller.ts  position.controller.ts  resume.controller.ts  user.controller.ts
src/layout/: Layout.vue
src/middlewares/: auth.middleware.ts  ownership.middleware.ts
src/mock/: auth.ts  user.ts
src/models/: Interview.ts  Position.ts  Resume.ts  User.ts  index.ts
src/router/: auth.route.ts  guards.ts  index.ts  interviews.route.ts  positions.route.ts  resumes.route.ts  users.route.ts
src/services/: permission.service.ts  (+1 more)
src/utils/: auth.ts  (+7 more)
(+57 files in other folders)
